--- a/src/Car/Car.css
+++ b/src/Car/Car.css
@@ -4,13 +4,20 @@
   padding: 10px;
   border-radius: 5px;
   transition: border, box-shadow 0.3s;
+  border: 1px sollid #ccc;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14);
 }
 
-.input {
+.Car:hover {
+  border: 1px solid #aaa;
+  box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 
-.input:active,
-.input:focus {
+/* .input {
+} */
+
+.input:active {
   outline: none;
 }
 
